Assert generator tests.